syntax = "proto3";

package users.v1;

option go_package = "github.com/mhirii/chronobreak/users/internal/api/users/v1";

service AuthService {
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Signup(SignupRequest) returns (SignupResponse);
	rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
	rpc GetUser(GetUserRequest) returns (GetUserResponse);
	rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
	rpc Logout(LogoutRequest) returns (LogoutResponse);
	rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignupRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}
message SignupResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetUserRequest {
  string access_token = 1;
}
message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message GetUserByIDRequest {
  string id = 1;
}
message GetUserByIDResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message LogoutRequest {
  string access_token = 1;
}
message LogoutResponse {
  string access_token = 1;
}

message ValidateRequest {
  string access_token = 1;
}
message ValidateResponse {
  bool valid = 1;
}
